Add link to CITATIONS.bib to the README. [ci skip]

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,4 +1,4 @@
-% primary paper, detailing the CUDAnative.jl GPU compiler and relevant aspects
+% primary paper, detailing the GPU compiler and relevant aspects
 @article{besard2018juliagpu,
   author        = {Besard, Tim and Foket, Christophe and De Sutter, Bjorn},
   title         = {Effective Extensible Programming: Unleashing {Julia} on {GPUs}},
@@ -11,7 +11,7 @@
   primaryClass  = {cs.PL},
 }
 
-% specific paper on array programming for heterogeneous systems (incl. CuArrays.jl)
+% specific paper on array programming for heterogeneous systems
 @article{besard2019prototyping,
   title         = {Rapid software prototyping for heterogeneous and distributed platforms},
   author        = {Besard, Tim and Churavy, Valentin and Edelman, Alan and De Sutter, Bjorn},
